--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.2",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
